# Retail-Sales-Analysis-and-Forecasting-Dashboard

./: .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README.md  config.py  dashboard.py  data_generator.py  info.txt  preprocess_favorita.py  pyproject.toml  requirements.txt  retail_sales_analysis.py  run_analysis.py  run_dashboard.py  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
test/: test_utils.py
